--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Redirection</title>
 </head>
 <body>
-    If you are not redirected automatically, please follow this <a href="html/index.html">link to the book</a>.
+    If you are not redirected automatically, please follow this <a href="sweccn-graph.html">link to the visualization</a>.
 </body>
 </html>
