bugfix: do not link to untracked local files

--- a/sweccn-graph.html
+++ b/sweccn-graph.html
@@ -2,14 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<!-- <script type="text/javascript" src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script> -->
-<script type="text/javascript" src="_tmp/vis-network.min.js"></script>
+<script type="text/javascript" src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
 <script type="text/javascript" src="sweccn-graph-data.js"></script>
 <script type="text/javascript" src="sweccn-graph-settings.js"></script>
-<!-- <script type="text/javascript" src="https://comparative-concepts.github.io/simple-graph-visualizer/graph-visualizer.js"></script> -->
-<!-- <link rel="stylesheet" href="https://comparative-concepts.github.io/simple-graph-visualizer/graph-visualizer.css"/> -->
-<script type="text/javascript" src="../simple-graph-visualizer/graph-visualizer.js"></script>
-<link rel="stylesheet" href="../simple-graph-visualizer/graph-visualizer.css"/>
+<script type="text/javascript" src="https://comparative-concepts.github.io/simple-graph-visualizer/graph-visualizer.js"></script>
+<link rel="stylesheet" href="https://comparative-concepts.github.io/simple-graph-visualizer/graph-visualizer.css"/>
 <link rel="stylesheet" href="sweccn-graph.css"/>
 <title>CC network</title>
 </head>
