--- a/sweccn-graph.html
+++ b/sweccn-graph.html
@@ -11,7 +11,7 @@
 <title>CC network</title>
 </head>
 
-<body onload="initialize()">
+<body>
   <h1>Visualization of the Swedish Constructicon, SweCCN</h1>
 
   <details>
